@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-00
+2013-03-15 Andy Salnikov
+- Hdf5DatasetIter now reads blocks of 512 objects from time container, 
+  helps with performance a lot
+
 Tag: V00-00-01
 2013-03-15 Andy Salnikov
 - retagging for nightlies
